--- a/register.html
+++ b/register.html
@@ -3,7 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>register Form</title>
+    <title>
+        register Form
+        new line
+    </title>
+
 </head>
 <body>
     
